[tool.poetry]
name = "022_data_imputation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
argparse = "^1.4.0"
numpy = "1.20"
pandas = "1.3.2"
python-dateutil = "2.8.2"
pytz = "2021.1"
six = "1.16.0"
matplotlib = "^3.4.3"
tqdm = "^4.62.3"
streamlit = "^1.4.0"
xlrd = "^2.0.1"
plotly = "^5.3.1"
sklearn = "^0.0"
gspread = "^5.1.1"
gsheetsdb = "^0.1.13"
umap-learn = "^0.5.2"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
